#4553 Ranking item overflow on small sizes Fixes #4553

--- a/packages/survey-creator-core/src/components/item-value.scss
+++ b/packages/survey-creator-core/src/components/item-value.scss
@@ -157,6 +157,8 @@
   }
   .svc-item-value__item {
     padding-right: 0;
+    flex-grow: 1;
+    width: 0;
   }
 }
 
@@ -171,6 +173,22 @@
 
   .sv-ranking-item__text {
     overflow: visible;
+    flex-grow: 1;
+    width: 0;
+  }
+
+  .svc-string-editor {
+    width: 100%;
+    display: inline-block;
+  }
+
+  .svc-string-editor__content {
+    width: 100%;
+  }
+
+  .sv-string-editor {
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 }
 
